[package]
name = "bisque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisque-cipher = { path = "../../libs/bisque-cipher" }

chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url = "2.5.0"
