[package]
name = "bisque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisque-cipher = { path = "../../libs/bisque-cipher" }
bisque-core = { path = "../../libs/bisque-core" }
bisque-google-drive = { path = "../../libs/bisque-google-drive" }

clap = { version = "4.5.3", features = ["derive"] }
