[package]
name = "bisque-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisque-cipher = { path = "../../libs/bisque-cipher" }
bisque-google-drive = { path = "../../libs/bisque-google-drive" }

chrono = "0.4.38"
serde = { workspace = true }
serde_json = { workspace = true }
